fixed header/footer issue by adding style to html, body of width/height 100 percent, padding/margin 0, overflow-x set to hide.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
     padding: 0;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+
 .nav-menu {
     background-color: #e0c173;
     overflow: hidden;
@@ -11,8 +20,12 @@
     text-align: center;
     border-top: 5px solid black;
     border-bottom: 5px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex: 1;
 }
 
 .nav-menu a {
@@ -156,7 +169,8 @@ footer {
     display: flex;
     justify-content: center;
     gap: 18px;
-    width: 100%
+    width: 100%;
+    flex: 1;
 }
 
 
@@ -189,6 +203,7 @@ footer {
             display: flex;
             align-items: left;
             flex-wrap: wrap;
+            flex: 1;
             /* flex-direction: column; */
         }
 
@@ -201,8 +216,14 @@ footer {
 
     .nav-menu.responsive a {
         float: none;
-        display: block;
-        text-align: left;
+        justify-content: left;
+        flex-direction: column;
     }
 
+}
+
+@media screen and (max-width: 525px) {
+    .nav-menu {
+        width: 100%,
+    }
 }
